# skyscraper

./: .gitignore  main.py  pyproject.toml
src/: client.py  processor.py  scraper.py
src/auth/: bskyauth.py
src/client/: client.py
src/process/: firehose_handlers.py  persistence.py  post_processors.py  resolver.py  workers.py
src/utils/: utils.py
